RESOLVED FIXED59395
Fix OwnPtr strict errors in some SVG classes.
https://bugs.webkit.org/show_bug.cgi?id=59395
Summary Fix OwnPtr strict errors in some SVG classes.
Adam Klein
Reported 2011-04-25 16:36:47 PDT
Fix OwnPtr strict errors in some SVG classes.
Attachments
Patch (4.37 KB, patch)
2011-04-25 16:37 PDT, Adam Klein
no flags
Patch (4.36 KB, patch)
2011-04-25 16:45 PDT, Adam Klein
no flags
Patch (4.36 KB, patch)
2011-04-25 17:00 PDT, Adam Klein
jamesr: review+
Adam Klein
Comment 1 2011-04-25 16:37:29 PDT
James Robinson
Comment 2 2011-04-25 16:39:25 PDT
Comment on attachment 91013 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=91013&action=review so close! > Source/WebCore/rendering/style/SVGRenderStyleDefs.cpp:166 > + , shadow(other.shadow ? adoptPtr(new ShadowData(*other.shadow)) : PassOwnPtr<ShadowData>(0)) PassOwnPtr<ShadowData>(), no '0' > Source/WebCore/svg/SVGStyledTransformableElement.cpp:68 > + m_supplementalTransform = adoptPtr(new AffineTransform()); nit: don't need the ()s on this c'tor > Source/WebCore/svg/SVGTextElement.cpp:100 > + m_supplementalTransform = adoptPtr(new AffineTransform()); nit: don't need the ()s on this c'tor
Adam Klein
Comment 3 2011-04-25 16:45:06 PDT
James Robinson
Comment 4 2011-04-25 16:48:24 PDT
Comment on attachment 91016 [details] Patch Yay!
Adam Klein
Comment 5 2011-04-25 16:51:47 PDT
Adam Klein
Comment 6 2011-04-25 16:55:57 PDT
Reverted r84844 for reason: Checked Committed r84847: <http://trac.webkit.org/changeset/84847>
Adam Klein
Comment 7 2011-04-25 17:00:00 PDT
James Robinson
Comment 8 2011-04-25 17:04:08 PDT
Comment on attachment 91026 [details] Patch Still looks good
Adam Klein
Comment 9 2011-04-25 17:06:36 PDT
Note You need to log in before you can comment on or make changes to this bug.